# job-scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
job_scraper/: parse.py
job_scraper/scripts/: main.py
